# client_data_ingester

./: .gitignore  README.md
mply_ingester/: pyproject.toml
mply_ingester/backend/: config.py  pyproject.toml  setup.py
mply_ingester/backend/client_data_ingestion/: base.py  parsers.py  service.py
mply_ingester/backend/db/: models.py
mply_ingester/backend/db/migrations/000/: 000_up_init.sql
mply_ingester/backend/mply_ingester/: config.py  default_settings.py
mply_ingester/backend/mply_ingester/db/: models.py
mply_ingester/backend/mply_ingester/db/migrations/000/: 001_up_init.sql
mply_ingester/backend/mply_ingester/ingestion/: base.py  parsers.py  service.py  transformers.py
mply_ingester/backend/mply_ingester/mply_ingester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mply_ingester/backend/mply_ingester/tests/test_utils/: base.py
mply_ingester/backend/mply_ingester/tests/web/api/: test_auth.py  test_products.py
mply_ingester/backend/mply_ingester/web/: app.py  dependencies.py
mply_ingester/backend/mply_ingester/web/api/: auth.py  products.py
mply_ingester/backend/web/: app.py  dependencies.py
mply_ingester/backend/web/api/: auth.py
mply_ingester/docker/: docker-compose.yml
