[project]
name = "mply-ingester-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mply-ingester-backend",
]

[tool.uv.sources]
mply-ingester-backend = { workspace = true }
