[project]
name = "mply-ingester"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.13",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["mply_ingester"]

[tool.setuptools.package-dir]
"mply_ingester" = "mply_ingester"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mply-ingester",
    "pytest>=8.4.1",
]

[tool.uv.sources]
mply-ingester = { workspace = true }
