[project]
name = "mply-ingester"
version = "0.1.0"
description = "Ingest various forms of client data i"
authors = [
    {name = "Multiply",email = "dev@multiply.cloud"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.114.0,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "dbmig (>=1.7.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
click = "^8.2.1"
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
